# mag-main-hddr

./: Dockerfile  README.md  __init__.py  client.py  docker-compose.clients.yml  docker-compose.server.yml  pyproject.toml  server.py
for_fl/: audit_strategy.py  client.py  interface.py  main_task.py  metrics.py  server.py
for_fl/sec_ops/: __init__.py  gradient_protection.py  opacus_protection.py  privacy_backend.py
for_fl/sec_ops/attacks/: __init__.py  gradient_inversion.py
sec_ops/: __init__.py  gradient_protection.py
